--- a/anotherTodo/Info.plist
+++ b/anotherTodo/Info.plist
@@ -2,6 +2,29 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleTypeExtensions</key>
+			<array>
+				<string></string>
+			</array>
+			<key>CFBundleTypeMIMETypes</key>
+			<array>
+				<string></string>
+			</array>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>com.gsabatie.anotherTodo.task</string>
+			</array>
+			<key>CFBundleTypeName</key>
+			<string>Task document</string>
+			<key>LSHandlerRank</key>
+			<string>Owner</string>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
